// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler options when TSConfig file is missing, sets default compiler options: stdout 1`] = `
"uses TypeScript <<version>>

pass ./__typetests__/dummy.test.ts
  + 'strictNullChecks': true
  + 'strictFunctionTypes': true
  + 'useUnknownInCatchVariables': false

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      3 passed, 3 total
Assertions: 3 passed, 3 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test file allows a file to be empty: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test file allows a file to have only an empty describe: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  parent
    empty describe

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test file allows a file to have only empty tests: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  + empty test

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test file allows a file to have only expect: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Assertions: 1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test file allows a file to have only skipped describe: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  skipped describe

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test file allows a file to have only skipped tests: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  - skip is skipped?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 skipped, 1 total
Assertions: 1 skipped, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test file allows a file to have only todo describe: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  have todo this
  and this one

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test file allows a file to have only todo tests: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  - todo have todo this
  - todo and this one

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      2 todo, 2 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
